<resources>
    <string name="app_name">FX Helper</string>
    <string name="loginID">Login ID</string>
    <string name="password">Password</string>
    <string name="userName">User name</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogout">Logout</string>

    <string name="btnChi">Chinese</string>
    <string name="btnEng">English</string>

    <string name="title_activity_home_page">Home</string>
    <string name="title_activity_favour">Favourite Currency Pairs</string>
    <string name="title_activity_recommend">Recommended Currency Pairs</string>
    <string name="title_activity_converter">Converter</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_privacy">Privacy Statement</string>

    <string name="search">Search : </string>
    <string name="keyHint">Input the currency name</string>
    <string name="baseCurrency">Base Currency</string>
    <string name="targetCurrency">Target Currency</string>
    <string name="btnConvert">Convert</string>
    <string name="language">Language</string>
    <string name="updatePersonal">Update Personal Information</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>

</resources>
