<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homepage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_activity_home_page" />
        <item
            android:id="@+id/favour"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_activity_favour" />
        <item
            android:id="@+id/recommend"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_activity_recommend" />
        <item
            android:id="@+id/converter"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_activity_converter" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_activity_settings" />
    </group>

    <item android:title="@string/title_activity_about">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_activity_about" />
            <item
                android:id="@+id/privacy"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_activity_privacy" />
        </menu>
    </item>

</menu>
